add: infinite scroll

--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
 
     <script src="webComponents/app.js"></script>
     <script src="webComponents/common/directive/collapsibleTree/angular-d3-tree.directive.js"></script>
+    <script src="webComponents/common/directive/systemSideBar/systemSideBar.directive.js"></script>
     <script src="webComponents/common/translate/translate.service.js"></script>
     <script src="webComponents/common/initGrid/initGrid.js"></script>
     <script src="webComponents/common/hsUiGridTemplates/hsTpl.js"></script>
@@ -89,6 +90,11 @@
 
     <script src="webComponents/projectManage/projectManage.controller.js"></script>
     <script src="webComponents/projectManage/projectManage.service.js"></script>
+
+    <script src="webComponents/userManage/userManage.controller.js"></script>
+    <script src="webComponents/userManage/userManage.service.js"></script>
+
+    
     <!-- endbuild -->
     <!--[if lt IE 7]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
