--- a/app/webComponents/dataBase/dataBase.html
+++ b/app/webComponents/dataBase/dataBase.html
@@ -2,7 +2,7 @@
     <md-sidenav
             class="md-sidenav-right pull--left data--base--wrapper "
             md-component-id="left"
-            md-is-locked-open="vm.showMenu"
+            md-is-locked-open="true"
             md-whiteframe="4"
             style="float: left"
     >
