fix: loading bar

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="bower_components/angular-ui-grid/ui-grid.min.css"/>
     <link rel="stylesheet" href="bower_components/angular-ui-router-anim-in-out/css/anim-in-out.css"/>
     <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.min.css"/>
+    <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css"/>
     <link rel="stylesheet" href="vendor/angular-ui-grid-3.0.7/less/main.css" />
 
     <!-- endbuild -->
@@ -34,8 +35,6 @@
     <link rel="stylesheet" href="webComponents/common/directive/collapsibleTree/collapsibleTree.css" />
     <link rel="stylesheet" href="webComponents/login/css/login.css" />
     <!-- endbuild -->
-
-
   </head>
   <body>
 
@@ -66,6 +65,7 @@
     <script src="bower_components/d3/d3.min.js"></script>
     <script src="bower_components/angular-ui-router-anim-in-out/anim-in-out.js"></script>
     <script src="bower_components/angular-ui-select/dist/select.min.js"></script>
+    <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
 
     <script src="webComponents/app.js"></script>
     <script src="webComponents/common/directive/collapsibleTree/angular-d3-tree.directive.js"></script>
