--- a/app/webComponents/projectManage/projectManage.html
+++ b/app/webComponents/projectManage/projectManage.html
@@ -1,9 +1,6 @@
-
-<div style="height: 55px;width: 100%;background: transparent" ></div>
-<div  class="anim-slide-below-fade"  >
-    <md-content >
-        <md-progress-linear ng-show="vm.loading" md-mode="indeterminate"></md-progress-linear>
-        <md-list style="width: 100%;">
+<div  class="anim-slide-below-fade project--manage--main--content--wrapper"  >
+    <md-content class="new--project--wrapper">
+        <md-list >
             <md-list-item class="md-3-line" >
                 <div class="md-list-item-text">
                     <h3>项目管理</h3>
@@ -17,7 +14,7 @@
             </md-list-item>
         </md-list>
     </md-content>
-    <md-content class="project--manage--main--content--wrapper">
+    <md-content class="project--manage--data--list--wrapper">
         <md-content class="md-padding " layout-xs="column" layout="row">
             <div flex-xs flex-gt-xs="50" layout="row">
                 <md-card
