--- a/app/webComponents/userManage/userManage.html
+++ b/app/webComponents/userManage/userManage.html
@@ -1,16 +1,8 @@
-<div class="anim-slide-right" style="height: 100%;float: left">
+<div class="anim-slide-right data--base--sidenav">
     <system-side-bar></system-side-bar>
 </div>
 
-<div
-        class="anim-slide-below-fade"
-        style="
-        margin-top:57px;
-        width: 78%;
-        float: left;
-    "
->
-    <md-progress-linear ng-show="vm.loading" md-mode="indeterminate"></md-progress-linear>
+<div class="anim-slide-below-fade data--base--sidenav--right--box">
 
     <div>
         userManage
