js:workFlow adjust

--- a/app/webComponents/dataError/dataError.html
+++ b/app/webComponents/dataError/dataError.html
@@ -1,4 +1,3 @@
-
 <div class="anim-slide-right data--base--sidenav" >
     <md-sidenav
             class="md-sidenav-right pull--left data--base--wrapper "
@@ -28,8 +27,8 @@
 
 
 <div class="anim-slide-below-fade data--base--sidenav--right--box">
-    <div>
-        <div style="float: left;">
+    <div class="">
+        <div >
             <span >按数据形态</span>
             <div>
                 <ui-select multiple ng-model="vm.parameter.dataType" theme="bootstrap"  close-on-select="false" style="width: 200px;" title="Choose a color">
@@ -40,7 +39,7 @@
                 </ui-select>
             </div>
         </div>
-        <div style="float: left;">
+        <div >
             <span >按来源系统</span>
             <div>
                 <ui-select multiple ng-model="vm.parameter.systemSource" theme="bootstrap"  close-on-select="false" style="width: 200px;" title="Choose a color">
@@ -51,7 +50,7 @@
                 </ui-select>
             </div>
         </div>
-        <div style="float: left;">
+        <div >
             <span >按单位</span>
             <div>
                 <ui-select multiple ng-model="vm.parameter.unit" theme="bootstrap"   close-on-select="false" style="width: 200px;" title="Choose a color">
@@ -62,7 +61,7 @@
                 </ui-select>
             </div>
         </div>
-        <div style="float: left;">
+        <div >
             <div layout="row">
                 <md-input-container>
                     <span>时间范围</span>
