adjust: change edit form

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,9 @@
     <link rel="stylesheet" href="bower_components/angular-ui-router-anim-in-out/css/anim-in-out.css"/>
     <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.min.css"/>
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css"/>
+    <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.min.css"/>
     <link rel="stylesheet" href="vendor/angular-ui-grid-3.0.7/less/main.css" />
+
 
     <!-- endbuild -->
 
@@ -34,6 +36,7 @@
     <link rel="stylesheet" href="webComponents/common/hsTemplates/css/hsTemplates.css" />
     <link rel="stylesheet" href="webComponents/common/directive/collapsibleTree/collapsibleTree.css" />
     <link rel="stylesheet" href="webComponents/login/css/login.css" />
+
     <!-- endbuild -->
   </head>
   <body>
@@ -66,6 +69,7 @@
     <script src="bower_components/angular-ui-router-anim-in-out/anim-in-out.js"></script>
     <script src="bower_components/angular-ui-select/dist/select.min.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
+    <script src="bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>
 
     <script src="webComponents/app.js"></script>
     <script src="webComponents/common/directive/collapsibleTree/angular-d3-tree.directive.js"></script>
