--- a/app/webComponents/dataError/dataError.html
+++ b/app/webComponents/dataError/dataError.html
@@ -1,32 +1,33 @@
-<div class="anim-slide-right data--base--sidenav" >
+<div class="anim-slide-right data--base--sidenav data--error" >
     <md-sidenav
             class="md-sidenav-right pull--left data--base--wrapper "
             md-component-id="left"
             md-is-locked-open="true"
             md-whiteframe="4"
-            style="float: left"
     >
         <div class="select--data--source--box">
             选择数据源
         </div>
-        <md-content layout-padding class="data--base--column--wrapper">
+        <md-content layout-padding class="data--base--column--wrapper clearfix">
             <md-list flex>
                 <!--<md-subheader class="md-no-sticky"></md-subheader>-->
                 <md-list-item class="md-1-line each--column--box" ng-repeat="item in vm.dataBases" ng-click="vm.getBaseData(item.objectId)"  ng-class="{active: vm.parameter.objectId == item.objectId}">
                     <div class="md-list-item-text" layout="column" >
                      <span>
-                        <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
+                        <span class="fa fa-database" aria-hidden="true"></span>
                         {{ item.displayName }}
                      </span>
                     </div>
                 </md-list-item>
             </md-list>
         </md-content>
+
+
     </md-sidenav>
 </div>
 
 
-<div class="anim-slide-below-fade data--base--sidenav--right--box">
+<div class="anim-slide-left data--base--sidenav--right--box">
     <div class="data--filtering--wrapper">
         <div class="data--filtering--head">
             <span class="title">数据过滤</span>
@@ -99,15 +100,13 @@
                     </md-input-container>
                 </div>
             </div>
-            <div >
-                <div flex-gt-sm="50">
+            <div class="search--location--box">
+                <div flex-gt-sm="20">
                     <md-checkbox  ng-checked="vm.parameter.dataError" ng-click="vm.parameter.dataError=!vm.parameter.dataError;vm.search()"  aria-label="Checkbox 1">
                         只显示有异常的批次
                     </md-checkbox>
+                    <md-button class="md-raised pull-right green--btn" ng-click="vm.search()">搜索</md-button>
                 </div>
-            </div>
-            <div >
-                <md-button class="md-raised" ng-click="vm.search()">搜索</md-button>
             </div>
         </div>
     </div>
