--- a/app/webComponents/projectManage/projectManage.html
+++ b/app/webComponents/projectManage/projectManage.html
@@ -1,13 +1,12 @@
 <div  class="anim-slide-below-fade project--manage--main--content--wrapper"  >
     <md-content class="new--project--wrapper">
         <md-list >
-            <md-list-item class="md-3-line" >
+            <md-list-item class="md-2-line new--project--btn--box" >
                 <div class="md-list-item-text">
                     <h3>项目管理</h3>
                     <p>建立项目针对每个归档系统建立归档策略和业务模版</p>
-
                 </div>
-                <md-button ng-click="vm.newProject($event)" class="md-warn md-raised ">
+                <md-button ng-click="vm.newProject($event)" class="md-no-ink md-warn md-raised red--btn new--project--btn">
                     <span class="glyphicon glyphicon-plus"></span>
                     <span translate="PROJECT_MANAGE_NEW_PROJECT">新建项目</span>
                 </md-button>
