--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>infoarchives</title>
+    <title>Infoarchives</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Gulp need-->
