adjust: grid-data&header

--- a/app/webComponents/dataError/dataError.html
+++ b/app/webComponents/dataError/dataError.html
@@ -75,7 +75,7 @@
                           </span>
                     </p>
                 </div>
-                <span>至</span>
+                <span class="time--frame__sign">-</span>
                 <div  layout="row" class="attribute--value">
                     <p class="input-group">
                         <input type="text" class="form-control" uib-datepicker-popup ng-model="vm.parameter.dateTo" is-open="popup3.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
@@ -96,7 +96,7 @@
         </div>
     </div>
     <div >
-        <div  ui-grid="gridOptions" class="common--uigrid--height" ui-grid-selection ui-grid-infinite-scroll></div>
+        <div  ui-grid="gridOptions" class="common--uigrid--height"  ui-grid-infinite-scroll></div>
     </div>
 
 </div>
