--- a/app/webComponents/dataBase/dataBase.html
+++ b/app/webComponents/dataBase/dataBase.html
@@ -73,7 +73,7 @@
                           </span>
                     </p>
                 </div>
-                <span>至</span>
+                <span class="time--frame__sign">-</span>
                 <div  layout="row" class="attribute--value">
                     <p class="input-group">
                         <input type="text" class="form-control" uib-datepicker-popup ng-model="vm.parameter.dateTo" is-open="popup3.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
